# esp32_base

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md
appl/: app.c  demo.c  demo.cpp  demo.h
core/: CMakeLists.txt  main.c  main.cpp  main.h
core/mcu/: mcu.c  mcu.h
core/rtos/: rtos.c  rtos.h
core/system/: log.cpp  log.h  system.c  system.cpp  system.h
doc/: Repo - esp32_base - ErisdarDemo - GitHub.url  readme.txt
doc/code/: cstdlib in C++ - Explained - incredibuild.url
doc/esp_idf/cpp/: C++ Support - ESP32 - — ESP-IDF Programming Guide v5.4.1 documentation.url
doc/esp_idf/log/: ESP32 -  How to Log Data - Random Nerd Tutorials.url  Logging library - ESP-IDF  v5.4.1 doc.url
doc/esp_idf/log/Alt/: ESP32 Logging • ThingPulse.url  GitHub - esp32m_logging_ ESP32 logging library.url
doc/parts/: readme.txt
doc/ref/: readme.txt
doc/research/: Email Capture.txt  esp-adf_examples_protocols_esp-rtsp_main_rtsp_service.c at master · espressif_esp-adf.url  esp-rtsp example for ESP32 - ESP32 Forum.url  how to stream video between two esp32 - Google Search.url  how to use c++ on esp32 - Google Search.url
doc/style/: driver.c  driver.h  source.c  source.cpp  source.h  style.h
main/: CMakeLists.txt  main.c
proj/: .project  CMakeLists.txt  esp32_base.code-workspace  sdkconfig
test/: readme.txt
